[metadata]
name = djipsecure
version = 1.0.2
description = Django IP Secure
# long_description = file:README.rst
# url = https://github.com/realpython/django-receipts
license = MIT

[options]
include_package_data = true
packages = find:
python_requires = >=3.8.13
install_requires =
    Django >=4.1.5  # Replace "X.Y" as appropriate
